[gd_scene load_steps=5 format=3 uid="uid://h840madvao4i"]

[ext_resource type="Script" uid="uid://bfkmuetanttve" path="res://EscenasGenerales/Menus/MenuPrincipal.gd" id="1_r0cbf"]
[ext_resource type="Texture2D" uid="uid://ddywhan1rjexl" path="res://Fondos/Fondoprincipal.png" id="2_htm4s"]
[ext_resource type="Texture2D" uid="uid://cs7n51v67tnqt" path="res://SpritesGenerales/titulo.png" id="3_nd5xr"]
[ext_resource type="AudioStream" uid="uid://duod7cj3gdwv1" path="res://AudiosGenerales/MusicaMenus/MusicaMenuPrincipal.mp3" id="4_jfdov"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r0cbf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_htm4s")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.0
offset_top = -242.5
offset_right = 235.0
offset_bottom = 242.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TituloJuego" type="TextureRect" parent="TextureRect/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_nd5xr")
expand_mode = 5

[node name="botonHistoria" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Modo Historia"

[node name="botonInfinito" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Modo infinito"

[node name="botonMultijugador" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Modo Multijugador"

[node name="botonOpciones" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Opciones"

[node name="botonSalir" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Salir"

[node name="botonChat" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
text = "Chat Multijugador"

[node name="MusicaMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jfdov")
volume_db = -4.0
autoplay = true
parameters/looping = false

[connection signal="pressed" from="TextureRect/VBoxContainer/botonHistoria" to="." method="_on_boton_historia_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/botonInfinito" to="." method="_on_boton_infinito_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/botonMultijugador" to="." method="_on_boton_multijugador_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/botonSalir" to="." method="_on_boton_salir_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/botonChat" to="." method="_on_boton_chat_pressed"]
